# stage_3d

./: .gitignore  .pubignore  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
android/: build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  jolt_ffi.cpp
android/src/main/assets/materials/: grass_wind.filamat  water.filamat
android/src/main/cpp/: CMakeLists.txt
assets/material_sources/: water.shader
assets/materials/: grass_wind.filamat  water.filamat
doc/: physics_api.md  rendering_bridge.md  rendering_lights.md  rendering_meshes.md  stage_scene.md  virtual_joystick.md
docs/: windows_filament_backend.md
example/: README.md  pubspec.yaml
example/lib/: main.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  jolt_physics.dart  jolt_rendering.dart  main.dart  stage_3d.dart
lib/input/: virtual_joystick.dart
lib/physics/: collider_shape.dart  physics_transform.dart  ray_cast.dart  rigid_body.dart  vector3.dart
lib/rendering/: environment.dart  filament_viewport.dart  light.dart  model_asset.dart  physics_collider_debug_painter.dart  physics_debug_overlay.dart  physics_scene_painter.dart  render_environment_controller.dart  render_light_controller.dart  render_model_controller.dart  render_options.dart  render_options_controller.dart  render_scene_bridge.dart  stage_camera.dart  textured_mesh_painter.dart  textured_mesh_prototype.dart
lib/scene/: camera_move_prototype.dart  orbit_camera.dart  physics_body_component.dart  physics_entity.dart  physics_scene.dart  positioned_model.dart  render_model_component.dart  stage_component.dart  stage_object.dart  stage_scene.dart  transform_component.dart
lib/ui/: filament_fox_scene_page.dart  physics_scene_page.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
native/: CMakeLists.txt
native/benchmarks/: CMakeLists.txt  stage_native_filament_demo.cpp
native/cmake/: StageFilamentWindows.cmake
native/core/: stage_engine.cpp
native/include/stage_3d/: stage_engine.h
native/platform/android/: stage_android_jni.cpp
native/platform/windows/: stage_filament_renderer.cpp  stage_filament_renderer.h
native/tests/: stage_engine_test.cpp
test/: camera_move_prototype_test.dart  collider_shape_test.dart  light_test.dart  model_asset_test.dart  physics_scene_test.dart  physics_world_test.dart  render_scene_bridge_test.dart  stage_scene_test.dart  virtual_joystick_test.dart  widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: CMakeLists.txt  Runner.rc  flutter_window.cpp  flutter_window.h  main.cpp  stage_windows_renderer_bridge.cpp  stage_windows_renderer_bridge.h
(+36 files in other folders)
